# infra-pre-commit-hooks

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  setup.cfg
pre_commit_hooks/: conftest-check.sh  create_bats_docs.py  create_patch_files.py
