[metadata]
name = sysdig_pre_commit_hooks
version = 0.0.1
description = Sysdig opinionated pre-commit hooks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/draios/infra-pre-commit-hooks
author = Sysdig infra/devops Team
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
python_requires = >=3.7

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    create-bats-docs = pre_commit_hooks.create_bats_docs:main

[bdist_wheel]
universal = True
